<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General strings -->
    <string name="app_name">Geekmenship</string>
    <string name="welcome_message">Welcome to <b>Geekmenship</b></string>
    <string name="hash_tag">#geekUp</string>

    <!-- Sign up activity strings -->
    <string name="first_name">First Name</string>
    <string name="invalid_first_name">Not a valid first name</string>
    <string name="last_name">Last Name</string>
    <string name="invalid_last_name">Not a valid last name</string>
    <string name="age">Age</string>
    <string name="average_age">I am 25 years old</string>
    <string name="age_question">How old are you?</string>
    <string name="email">Email</string>
    <string name="email_entry">Enter your email</string>
    <string name="invalid_email">Email address not valid</string>
    <string name="occupation">Occupation</string>
    <string name="occupation_question">What is your occupation?</string>
    <string name="location">Location</string>
    <string name="location_question">Where do you live?</string>
    <string name="description">Describe your geekiness</string>
    <string name="gender">Gender</string>
    <string name="gender_question">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_gender">Other</string>
    <string name="other_gender_description">None of the above</string>
    <string name="i_am">I am \ </string>
    <string name="i_am_a">I am a \ </string>
    <string name="i_am_an">I am an \ </string>
    <string name="years_old">" "years old</string>
    <string name="geek_leader">I will organize events.</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password does not match</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="send">Send</string>
    <string name="sign_Up">Geek Up</string>
    <string name="sign_In">Geek In</string>
    <string name="attending">RSVP</string>
    <string name="not_attending">Regret</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">My Password?</string>
    <string name="register_event">Register</string>
    <string name="occupation_employee">Employee</string>
    <string name="occupation_entrepreneur">Entrepreneur</string>
    <string name="occupation_freelancer">Freelancer</string>
    <string name="occupation_researcher">Researcher</string>
    <string name="occupation_student">Student</string>
    <string name="occupation_other">Other</string>
    <string name="occupation_other_description">I do something else</string>
    <string name="community_title">Community Name (e.g. GDG - Pretoria)</string>
    <string name="community_interest">Interest</string>
    <string name="community_description">Description</string>
    <string name="event_title">Title</string>
    <string name="event_date">Date</string>
    <string name="event_description_date">Which date will the event happen?</string>
    <string name="event_time">Time</string>
    <string name="event_description_time">What time will the event start?</string>
    <string name="event_venue">Where will the event be hosted?</string>
    <string name="event_description">Description</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="event_registration_description"><![CDATA[State tech community will you be organizing events for:]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_share">Share</string>
    <string name="action_overflow">Menu</string>
    <string name="action_accept">Accept</string>
    <string name="action_new_picture">Set Profile Picture</string>
    <string name="title_activity_signing">Geekmenship</string>
    <string name="error_device_not_supported">Your device doesn\'t support the crop action!</string>
    <string name="error_only_numeric_digits_allowed">Only numeric digits are allowed.</string>
    <string name="error_only_numeric_digits_range_allowed">Only numeric digits within the range %1$s - %2$s are allowed.</string>
    <string name="error_this_field_cannot_contain_special_character">This field cannot contain any special character</string>
    <string name="error_only_standard_letters_are_allowed">Only standard letters are allowed</string>
    <string name="error_field_must_not_be_empty">The field must not be empty</string>
    <string name="error_email_address_not_valid">Email address not valid</string>
    <string name="error_creditcard_number_not_valid">Credit card number is not valid</string>
    <string name="error_phone_not_valid">Phone number not valid</string>
    <string name="error_domain_not_valid">Domain name not valid</string>
    <string name="error_ip_not_valid">IP Address not valid</string>
    <string name="error_url_not_valid">Web Url is not valid</string>
    <string name="error_notvalid_personname">Not a valid first or last name.</string>
    <string name="error_notvalid_personfullname">Not a valid full name.</string>
    <string name="error_date_not_valid">Format not valid</string>
    <string name="error_no_internet">Oh no! The Internet connection isn\'t available</string>
    <string name="service_not_available">The map service is currently not available</string>
    <string name="invalid_lat_long_used">The Latitude and/or Longitude value(s) are invalid</string>
    <string name="no_address_found">Hey bro, you can\'t live in an ocean you know that right?</string>
    <string name="address_found">Adress found</string>
    <string name="no_geocoder_available">There is no geocoder available</string>
    <string name="no_suburb_name">Dude, you have to select a place with a suburb name, try zooming in.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_activity2">Map</string>
    <string name="event_start_date">Select start date</string>
    <string name="event_end_date">Select end date</string>
    <string name="event_start_time">Select start time</string>
    <string name="event_end_time">Select end time</string>
    <string name="date_format">dd MMMM yyyy</string>
    <string name="event_organiser">Event Organiser</string>

</resources>
