<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@+id/femaleRadioButton">

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/otherRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_gender"/>
        </RadioGroup>

        <Button
            android:id="@+id/genderButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="sans-serif-light"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

</RelativeLayout>