<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:text="@string/event_registration_description"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/geekCommunityNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/community_title"
            android:ems="10"
            android:maxLines="1"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/geekCommunityDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:inputType="textMultiLine"
            android:hint="@string/community_description"
            android:ems="10"
            android:maxLines="5"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_alignParentBottom="true"
            android:divider="@drawable/vertical_divider_white"
            android:dividerPadding="12dip"
            android:showDividers="middle">

            <Button
                android:id="@+id/eventOrganiserCancelButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@color/greenish_blue"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/eventOrganiserDoneButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:background="@color/orange"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>