<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.geekmenship.app.EventRegisterActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="405dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <ImageButton
                    android:id="@+id/newComminutyProfilePicImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/ic_action_new_picture"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/eventTitleTextView"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/event_title"
                    android:ems="10"
                    android:lines="1"
                    android:maxLines="1"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/eventDescriptionTextView"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/event_description"
                    android:ems="10"
                    android:minLines="1"
                    android:maxLines="4"
                    android:lines="4"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>

                <Spinner
                    android:id="@+id/eventVenueSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="-25dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/event_venue"
                    android:ems="10"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/grey"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/eventDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_date"
                    android:ems="10"
                    android:lines="1"
                    android:maxLines="1"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/orange"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/eventTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_time"
                    android:ems="10"
                    android:maxLines="1"
                    android:lines="1"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/greenish_blue"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/vertical_divider_white"
        android:dividerPadding="12dip"
        android:showDividers="middle" >

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_event"
            android:background="@color/orange"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>
