<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekmenship.app.SignUpActivity_old">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="405dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/newProfilePicButton"
                        android:layout_width="100dp"
                        android:layout_height="105dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_action_new_picture"
                        android:background="@color/grey"
                        android:clickable="true"
                        android:focusable="true"
                        android:scaleType="centerInside"
                        android:adjustViewBounds="true" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <FrameLayout
                            android:id="@+id/firstNameFrameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/lastNameFrameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/ageFrameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <FrameLayout
                        android:id="@+id/emailFrameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </FrameLayout>

                    <Spinner
                        android:id="@+id/occupationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="-25dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_marginTop="3dp"
                        android:hint="@string/occupation"
                        android:ems="10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/grey"
                        android:fontFamily="sans-serif-light"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/locationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="-25dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_marginTop="3dp"
                        android:hint="@string/location"
                        android:ems="10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/grey"
                        android:fontFamily="sans-serif-light"
                        android:textSize="16sp"/>

                    <FrameLayout
                        android:id="@+id/descriptionFrameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/passwordFrameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/confirmPasswordFrameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </FrameLayout>

                    <RadioGroup
                        android:id="@+id/genderRadioGroup_1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="5dp">

                        <RadioButton
                            android:id="@+id/maleRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:fontFamily="sans-serif-light"
                            android:buttonTint="@color/greenish_blue"
                            android:checked="true"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/femaleRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:buttonTint="@color/greenish_blue"
                            android:text="@string/female"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dontDiscloseRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:buttonTint="@color/greenish_blue"
                            android:text="@string/other_gender_description"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/otherRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:buttonTint="@color/greenish_blue"
                            android:text="@string/other_gender"
                            android:textSize="16sp" />

                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/organiserCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:buttonTint="@color/greenish_blue"
                        android:text="@string/geek_leader"
                        android:textSize="16sp"/>



                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_Up"
            android:fontFamily="sans-serif-light"
            android:background="@color/orange"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>
